# client.py

./: .coveragerc  .devcontainer.json  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  mypy.ini  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: release-drafter.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  codeql-analysis.yml  python-publish.yml  release-drafter.yml
ci/: Dockerfile.alpine  entrypoint.sh
deebot_client/: __init__.py  _api_client.py  api_client.py  authentication.py  capabilities.py  command.py  command_old.py  configuration.py  const.py  device.py  event_bus.py  exceptions.py  logging.py  logging_filter.py  map.py  message.py  models.py  mqtt_client.py  rs.py  rs.pyi  util.py  vacuum_bot.py
deebot_client/commands/: __init__.py  advanced_mode.py  battery.py  break_point.py  carpet.py  carpet_pressure.py  charge.py  charge_state.py  clean.py  clean_count.py  clean_logs.py  clean_preference.py  common.py  continuous_cleaning.py  custom.py  error.py  fan_speed.py  life_span.py  map.py  multimap_state.py  play_sound.py  pos.py  relocation.py  stats.py  true_detect.py  volume.py  water_info.py
deebot_client/commands/json/: __init__.py  advanced_mode.py  auto_empty.py  auto_empty_enable.py  battery.py  border_switch.py  carpet.py  charge.py  charge_state.py  child_lock.py  clean.py  clean_count.py  clean_logs.py  clean_logs_v2.py  clean_preference.py  clear_map.py  common.py  const.py  continuous_cleaning.py  cross_map_border_warning.py  custom.py  cut_direction.py  efficiency.py  error.py  fan_speed.py  life_span.py  map.py  mop_auto_wash_frequency.py  moveup_warning.py  multimap_state.py  network.py  ota.py  play_sound.py  pos.py  relocation.py  safe_protect.py  station_action.py  station_state.py  stats.py  sweep_mode.py  (+7 more)
deebot_client/commands/xml/: __init__.py  battery.py  charge.py  charge_state.py  clean.py  clean_logs.py  common.py  const.py  continuous_cleaning.py  error.py  fan_speed.py  life_span.py  map.py  multimap_state.py  play_sound.py  pos.py  relocation.py  stats.py  true_detect.py  volume.py  water_info.py
deebot_client/events/: __init__.py  auto_empty.py  base.py  base_station.py  clean.py  const.py  efficiency_mode.py  event_bus.py  fan_speed.py  map.py  mop_auto_wash_frequency.py  network.py  station.py  stats.py  wash_info.py  wash_interval.py  water_info.py  work_mode.py
deebot_client/hardware/: __init__.py  deebot.py  device_capabilities.py  exceptions.py
deebot_client/hardware/deebot/: 1b23du.py  2o4lnm.py  4bdkrs.py  4vhygi.py  5xu9h3.py  659yh8.py  77atlz.py  7bryc5.py  7j1tu6.py  822x8d.py  87swps.py  8kwdb4.py  8tyt2y.py  9gqyaq.py  9s1s80.py  __init__.py  b2jqs4.py  buom7k.py  c0lwyn.py  cb69w5.py  clojes.py  dlrbzq.py  e6ofmn.py  e6rcnf.py  e6yxdm.py  edoodo.py  fallback.py  fqxoiu.py  guzput.py  h18jkh.py  i35yb6.py  kr0277.py  lf3bn4.py  lhbd50.py  ls1ok3.py  ls1ok3.py.bak  m1wkuw.py  n4gstt.py  p0l0af.py  p1jij8.py  (+16 more)
deebot_client/messages/: __init__.py  battery.py  stats.py
deebot_client/messages/json/: __init__.py  auto_empty.py  base_station.py  battery.py  charge_state.py  clean.py  error.py  map.py  pos.py  station_state.py  stats.py  wash_info.py
deebot_client/messages/xml/: __init__.py  battery.py  common.py  stats.py
deebot_client/rs/: map.pyi  util.pyi
deebot_client/util/: __init__.py  continents.py  countries.py
scripts/: check_for_similar_models.py  check_getLogger.sh  run-in-env.sh  setup.sh
src/: lib.rs  map.rs  util.rs
tests/: common.py  conftest.py  helpers.py  mqtt_util.py  test_authentication.py  test_command.py  test_configuration.py  test_device.py  test_event_bus.py  test_map.py  test_models.py  test_mqtt_client.py  test_mqtt_client_reconnect.py  test_rs.py  test_util.py  test_vacuum_bot.py
tests/commands/: __init__.py  test_advanced_mode.py  test_battery.py  test_carpet.py  test_charge.py  test_charge_state.py  test_clean.py  test_clean_count.py  test_clean_log.py  test_clean_preference.py  test_commands.py  test_common.py  test_continuous_cleaning.py  test_custom.py  test_error.py  test_fan_speed.py  test_life_span.py  test_map.py  test_mulitmap_state.py  test_true_detect.py  test_water_info.py
tests/commands/json/: __init__.py  test_advanced_mode.py  test_auto_empty.py  test_battery.py  test_border_switch.py  test_carpet.py  test_charge.py  test_charge_state.py  test_child_lock.py  test_clean.py  test_clean_count.py  test_clean_log.py  test_clean_log_v2.py  test_clean_preference.py  test_common.py  test_continuous_cleaning.py  test_cross_map_border_warning.py  test_custom.py  test_cut_direction.py  test_efficiency.py  test_error.py  test_fan_speed.py  test_life_span.py  test_map.py  test_mop_auto_wash_frequency.py  test_moveup_warning.py  test_mulitmap_state.py  test_network.py  test_ota.py  test_play_sound.py  test_pos.py  test_safe_protect.py  test_station_action.py  test_station_state.py  test_stats.py  test_sweep_mode.py  test_true_detect.py  test_voice_assistant_state.py  test_volume.py  test_wash_info.py  (+3 more)
tests/commands/xml/: __init__.py  test_charge_state.py  test_error.py  test_fan_speed.py  test_life_span.py  test_play_sound.py  test_pos.py  test_stats.py
tests/events/: test_event_bus.py  test_events.py  test_water_info.py
tests/fixtures/: base.py  mqtt_server.py
tests/hardware/: __init__.py  test_deebot.py  test_device_capabilities.py  test_init.py
tests/helpers/: __init__.py  tasks.py
tests/messages/: __init__.py  test_battery.py  test_get_messages.py  test_messages.py  test_stats.py
tests/messages/json/: test_auto_empty.py  test_battery.py  test_charge_state.py  test_clean.py  test_error.py  test_get_messages.py  test_map.py  test_pos.py  test_station_state.py  test_stats.py
tests/messages/xml/: test_battery.py
tests/rs/: test_util.py
tests/util/: test_continents.py  test_countries.py  test_init.py
