[package]
name = "deebot_client"
version = "0.0.0"
edition = "2021"
authors = ["Robert Resch <robert@resch.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "deebot_client"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
lzma-rs = "0.3.0"
pyo3 = "0.23.3"
