[package]
name = "deebot_client"
version = "0.0.0"
edition = "2021"
authors = ["Robert Resch <robert@resch.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "deebot_client"
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
liblzma = "0.3.5"
log = "0.4.25"
pyo3 = "0.23.3"
pyo3-log = "0.12.1"
svg = "0.18.0"

[dev-dependencies]
rstest = "0.24.0"
