[build-system]
requires = ["setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name        = "deebot-client"
license     = {text = "GPL-3.0"}
description = "Deebot client library in python 3"
readme      = "README.md"
authors     = [
    {name = "Robert Resch", email = "robert@resch.dev"}
]
keywords    = ["home", "automation", "homeassistant", "vacuum", "robot", "deebot", "ecovacs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11.0"
dynamic = ["dependencies", "version"]

[project.urls]
"Homepage"    = "https://deebot.readthedocs.io/"
"Source Code" = "https://github.com/DeebotUniverse/client.py"
"Bug Reports" = "https://github.com/DeebotUniverse/client.py/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["deebot_client*"]

[tool.setuptools_scm]
[tool.black]
target-version = ['py311']
safe = true

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false


[tool.ruff.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = [
    "deebot_client",
]



[tool.ruff]
select = [
    "ASYNC",  # https://docs.astral.sh/ruff/rules/#flake8-async
    "B",  # https://docs.astral.sh/ruff/rules/#flake8-bugbear
    "C",  # complexity
    "COM818", # Trailing comma on bare tuple prohibited
    "C4",  # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "D",  # docstrings
    "DTZ003",  # Use datetime.now(tz=) instead of datetime.utcnow()
    "DTZ004",  # Use datetime.fromtimestamp(ts, tz=) instead of datetime.utcfromtimestamp(ts)
    "E",  # pycodestyle
    "F",  # pyflakes/autoflake
    "G", # https://docs.astral.sh/ruff/rules/#flake8-logging-format-g
    "I",  # isort
    "ICN001", # import concentions; {name} should be imported as {asname}
    "ISC", # https://docs.astral.sh/ruff/rules/#flake8-implicit-str-concat-isc
    "N",  # pep8-naming
    "PIE", # https://docs.astral.sh/ruff/rules/#flake8-pie-pie
    "PGH001", # No builtin eval() allowed
    "PGH004",  # Use specific rule codes when using noqa
    "PLC0414", # Useless import alias. Import alias does not rename original package.
    "PLC", # pylint
    "PLE", # pylint
    "PLR", # pylint
    "PLW", # pylint
    "PT", # https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "PYI", # https://docs.astral.sh/ruff/rules/#flake8-pyi-pyi
    "Q", # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "RET", # https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "RSE", # https://docs.astral.sh/ruff/rules/#flake8-raise-rse
    "RUF006", # Store a reference to the return value of asyncio.create_task
    "S",  # flake8-bandit
    "SIM", # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "SLF", # https://docs.astral.sh/ruff/rules/#flake8-self-slf
    "SLOT", # https://docs.astral.sh/ruff/rules/#flake8-slots-slot
    "T100", # Trace found: {name} used
    "T20",  # https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "TID", # https://docs.astral.sh/ruff/rules/#flake8-tidy-imports-tid
    "TRY004", # Prefer TypeError exception for invalid type
    "TRY200", # Use raise from to specify exception cause
    "TRY302", # Remove exception handler; error is immediately re-raised
    "UP",  # pyupgrade
    "W",  # pycodestyle
]
ignore = [
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in `__init__`
    "D202",  # No blank lines allowed after function docstring
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "E501",  # line too long

    "PLR2004",  # Magic value used in comparison, consider replacing {value} with a constant variable
    # Conflicts with the Ruff formatter
    "COM812",
    "ISC001",
]

[tool.ruff.per-file-ignores]
"tests/**" = [
    "D100",  # Missing docstring in public module
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "N802",  # Function name {name} should be lowercase
    "N816",  # Variable {name} in global scope should not be mixedCase
    "S101",  # Use of assert detected
    "SLF001", # Private member accessed: {access}
    "T201",  # print found
]

[tool.ruff.mccabe]
max-complexity = 12

[tool.ruff.pylint]
max-args = 7


[tool.pylint.MAIN]
py-version = "3.11"
ignore = [
    "tests",
]
fail-on = [
    "I",
]

[tool.pylint.BASIC]
good-names= ["i","j","k","ex","_","T","x","y","id","tg"]

[tool.pylint."MESSAGES CONTROL"]
# Reasons disabled:
# format - handled by black
# duplicate-code - unavoidable
# cyclic-import - doesn't test if both import on load
# abstract-class-little-used - prevents from setting right foundation
# too-many-* - are not enforced for the sake of readability
# too-few-* - same as too-many-*
# abstract-method - with intro of async there are always methods missing
# inconsistent-return-statements - doesn't handle raise
# too-many-ancestors - it's too strict.
# wrong-import-order - isort guards this
# ---
# Pylint CodeStyle plugin
# consider-using-namedtuple-or-dataclass - too opinionated
# consider-using-assignment-expr - decision to use := better left to devs
disable = [
    "format",
    "cyclic-import",
    "duplicate-code",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-ancestors",
    "too-few-public-methods",
]
enable = [
    "useless-suppression",
    "use-symbolic-message-instead",
]

[tool.pylint.REPORTS]
score = false


[tool.pylint.FORMAT]
expected-line-ending-format = "LF"

[tool.pylint.EXCEPTIONS]
overgeneral-exceptions = [
    "builtins.BaseException",
    "builtins.Exception",
]